tests/approval/snapshots/approval_sqlite__server_info.snap
---
source: tests/approval/sqlite.rs
assertion_line: 26
expression: info
---
{
  "protocolVersion": "2025-11-25",
  "capabilities": {
    "tools": {}
  },
  "serverInfo": {
    "name": "database-mcp",
    "title": "Database MCP Server",
    "version": "[version]",
    "description": "Database MCP Server for SQLite",
    "websiteUrl": "https://database.haymon.ai"
  },
  "instructions": "## Workflow\n\n1. Call `listTables` to discover tables in the connected database.\n2. Call `getTableSchema` with a `tableName` to inspect columns, types, and foreign keys before writing queries.\n3. Use `readQuery` for read-only SQL (SELECT).\n4. Use `writeQuery` for data changes (INSERT, UPDATE, DELETE, CREATE, ALTER, DROP).\n5. Use `explainQuery` to analyze query execution plans and diagnose slow queries.\n6. Use `dropTable` to remove a table from the database.\n\n## Constraints\n\n- The `writeQuery` and `dropTable` tools are hidden when read-only mode is active.\n- Multi-statement queries are not supported. Send one statement per request."
}
